<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/alt_text"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/sandwich" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filling"
        android:paddingStart="@dimen/text_padding_start"
        android:paddingEnd="@dimen/text_padding_start"
        android:paddingTop="@dimen/text_padding_start"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:paddingStart="@dimen/text_padding_start"
        android:paddingEnd="@dimen/text_padding_start"
        android:layout_height="wrap_content"
        android:text="@string/filling_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:layout_gravity="end"
        android:paddingStart="@dimen/text_padding_start"
        android:paddingEnd="@dimen/text_padding_start"
        android:paddingTop="@dimen/text_padding_start"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:text="@string/add" />
</LinearLayout>